<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Messenger</string>
    <string name="hint_username">Имя пользователя</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_message">Сообщение…</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_send">Отправить</string>
    <string name="label_no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="label_have_account">Уже есть аккаунт? Войти</string>
    <string name="typing">печатает…</string>
</resources>
